--- a/SmartPick/App.config
+++ b/SmartPick/App.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="SmartPick.My.MySettings.MenuTTSConnectionString" connectionString="Data Source=ulatina.database.windows.net;Initial Catalog=MenuTTS;Persist Security Info=True;User ID=josemcm85;Password=Pass1234"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
