--- a/SmartPick/SmartPickMenu.vbproj
+++ b/SmartPick/SmartPickMenu.vbproj
@@ -298,6 +298,7 @@
     <Content Include="logoblack.png" />
     <Content Include="MetroFramework.dll" />
     <Content Include="minusSign.png" />
+    <Content Include="plussign 3.png" />
     <Content Include="plusSign.png" />
     <None Include="Resources\icons8_price_tag_50px_1.png" />
     <None Include="Resources\icons8_language_48px_1.png" />
