--- a/SmartPick/SmartPickMenu.vbproj
+++ b/SmartPick/SmartPickMenu.vbproj
@@ -296,6 +296,7 @@
     <Content Include="icons8_visible_25px.png" />
     <Content Include="logoblack.ico" />
     <Content Include="logoblack.png" />
+    <Content Include="MANDALAS2.jpg" />
     <Content Include="MetroFramework.dll" />
     <Content Include="minusSign.png" />
     <Content Include="plussign 3.png" />
