Historia "Agregar Orden"

--- a/SmartPick/SmartPickMenu.vbproj
+++ b/SmartPick/SmartPickMenu.vbproj
@@ -283,14 +283,21 @@
     <Content Include="gradient-01.png" />
     <Content Include="gradient.png" />
     <Content Include="gradiente-01.png" />
+    <Content Include="icons8_-1_50px.png" />
     <Content Include="icons8_caloric_energy_100px_3.png" />
     <Content Include="icons8_caloric_energy_25px_2.png" />
     <Content Include="icons8_caloric_energy_50px_1.png" />
     <Content Include="icons8_cheap_2_24px_1.png" />
     <Content Include="icons8_cheap_2_48px_3.png" />
+    <Content Include="icons8_delete_databasesmall_48px_5.png" />
+    <Content Include="icons8_delete_database_48px_5.png" />
     <Content Include="icons8_language_48px_1.png" />
+    <Content Include="icons8_minus_64px.png" />
     <Content Include="icons8_nonya_kueh_100px_1.png" />
+    <Content Include="icons8_plus_64px.png" />
+    <Content Include="icons8_plus_math_52px_2.png" />
     <Content Include="icons8_street_food_100px_1.png" />
+    <Content Include="icons8_timezone-1_50px.png" />
     <Content Include="icons8_us_dollar_100px_1.png" />
     <Content Include="icons8_visible_100px_3.png" />
     <Content Include="icons8_visible_25px.png" />
@@ -301,6 +308,13 @@
     <Content Include="minusSign.png" />
     <Content Include="plussign 3.png" />
     <Content Include="plusSign.png" />
+    <None Include="Resources\icons8_delete_databasesmall_48px_5.png" />
+    <None Include="Resources\icons8_delete_database_48px_5.png" />
+    <None Include="Resources\icons8_-1_50px.png" />
+    <None Include="Resources\icons8_timezone-1_50px.png" />
+    <None Include="Resources\icons8_minus_64px.png" />
+    <None Include="Resources\icons8_plus_64px.png" />
+    <None Include="Resources\icons8_plus_math_52px_2.png" />
     <None Include="Resources\icons8_price_tag_50px_1.png" />
     <None Include="Resources\icons8_language_48px_1.png" />
     <None Include="Resources\icons8_cheap_2_48px_3.png" />
