--- a/SmartPick/SmartPickMenu.vbproj
+++ b/SmartPick/SmartPickMenu.vbproj
@@ -185,6 +185,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Orden.Designer.vb">
+      <DependentUpon>Orden.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Orden.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Recuperar.Designer.vb">
       <DependentUpon>Recuperar.vb</DependentUpon>
     </Compile>
@@ -237,6 +243,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Orden.resx">
+      <DependentUpon>Orden.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Recuperar.resx">
       <DependentUpon>Recuperar.vb</DependentUpon>
