ACTUALIZACION DEL BOTON (CON LAS MESAS)

--- a/SmartPick/SmartPickMenu.vbproj
+++ b/SmartPick/SmartPickMenu.vbproj
@@ -191,6 +191,12 @@
     <Compile Include="Recuperar.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="formTable.Designer.vb">
+      <DependentUpon>formTable.vb</DependentUpon>
+    </Compile>
+    <Compile Include="formTable.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Tipo.Designer.vb">
       <DependentUpon>Tipo.vb</DependentUpon>
     </Compile>
@@ -240,6 +246,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Recuperar.resx">
       <DependentUpon>Recuperar.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formTable.resx">
+      <DependentUpon>formTable.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Tipo.resx">
       <DependentUpon>Tipo.vb</DependentUpon>
