Tamaño de Letra

--- a/SmartPick/App.config
+++ b/SmartPick/App.config
@@ -5,6 +5,9 @@
     <connectionStrings>
         <add name="SmartPick.My.MySettings.MenuTTSConnectionString" connectionString="Data Source=ulatina.database.windows.net;Initial Catalog=MenuTTS;Persist Security Info=True;User ID=josemcm85;Password=Pass1234"
             providerName="System.Data.SqlClient" />
+        <add name="SmartPick.My.MySettings.MenuTTSConnectionString1"
+            connectionString="Data Source=Desktop-Kbtk5sb;Initial Catalog=MenuTTS;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
